--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "chart.js": "^4.4.9",
+    "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.9.2",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
