--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
+    "autoprefixer": "^10.4.21",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.9.2",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -27,6 +30,6 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.4"
   }
 }
