--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
