--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.9.2",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
