--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.509.0",
-    "next": "15.3.1",
+    "next": "^15.5.7",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -47,7 +47,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "^15.5.7",
     "tailwindcss": "^4.1.4"
   }
 }
